Changes for initial release

--- a/index_template.html
+++ b/index_template.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Kalman star watch</title>
-    <link href="http://cxc.harvard.edu/mta/ASPECT/aspect.css" rel="stylesheet"
+    <link href="/mta/ASPECT/aspect.css" rel="stylesheet"
     type="text/css" media="all" />
     <style type="text/css">
       tr.pink-bkg {
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <!--#include virtual="http://cxc.harvard.edu/mta/ASPECT/header.html"-->
+    <!--#include virtual="/mta/ASPECT/header.html"-->
 
     <h2> Kalman star watch </h2>
 
@@ -22,7 +22,7 @@
       The image below shows intervals where the number of Kalman stars reported by the OBC
       (AOKALSTR) was zero or one for at least one update.  Intervals of greater than 60
       seconds in length which occurred in the last 7 days are shown in red in the plot and
-      table below.
+      in the table below.
     </p>
 
     <h3>Kalman drop intervals (updated <!--#CONFIG TIMEFMT="%x"--><!--#flastmod file="kalman_drop_intervals.png"-->)</h3>
@@ -42,11 +42,11 @@
 
     <h3> Analysis data </h3>
       The scripts and data used in this analysis are in
-      <a href="https://github.com/sot/kalman_stars">https://github.com/sot/kalman_stars</a>.
+      <a href="https://github.com/sot/kalman_watch">https://github.com/sot/kalman_watch</a>.
 
       <br></br>
 
-<!--#include virtual="http://cxc.harvard.edu/mta/ASPECT/footer.html"-->
+<!--#include virtual="/mta/ASPECT/footer.html"-->
 <!--footer end-->
 
   </body>
