Add long-duration flag and code to issue warnings for long-duration events

--- a/index_template.html
+++ b/index_template.html
@@ -20,7 +20,7 @@
 
     <p>
       The image below shows intervals where the number of Kalman stars reported by the OBC
-      (AOKALSTR) was zero or one for at least one update.  Intervals of greater than 60
+      (AOKALSTR) was zero or one for at least one update.  Intervals of greater than {{long_dur_limit}}
       seconds in length which occurred in the last 7 days are shown in red in the plot and
       in the table below.
     </p>
@@ -29,7 +29,7 @@
 
     <img SRC="kalman_drop_intervals.png"><br/>
 
-    <h4>Intervals longer than 60 seconds</h4>
+    <h4>Intervals longer than {{long_dur_limit}} seconds</h4>
 
     <table class="white-double-lines">
      <tr> <th> Date </th> <th> Duration </th> <th> Obsid </th> </tr>
