--- a/index_template.html
+++ b/index_template.html
@@ -25,7 +25,7 @@
       in the table below.
     </p>
 
-    <h3>Kalman drop intervals (updated <!--#CONFIG TIMEFMT="%x"--><!--#flastmod file="kalman_drop_intervals.png"-->)</h3>
+    <h3>Kalman drop intervals  (valid through {{last_date}})</h3>
 
     <img SRC="kalman_drop_intervals.png"><br/>
 
