--- a/kalman_watch/index_low_kalman_template.html
+++ b/kalman_watch/index_low_kalman_template.html
@@ -33,6 +33,8 @@
 
     <h2> Kalman star watch </h2>
 
+    See also <a href="perigees/index.html">Perigee Kalman watch</a>.
+
     <h3> Summary </h3>
 
     <p>
