Improve web page outputs

--- a/kalman_watch/index_kalman_perigee_detail.html
+++ b/kalman_watch/index_kalman_perigee_detail.html
@@ -43,7 +43,8 @@
         </tr>
         <tr>
             <td><a
-                    href="https://web-kadi.cfa.harvard.edu/mica/?obsid_or_date={{obsid}}">
+                    href="https://web-kadi.cfa.harvard.edu/mica/?obsid_or_date={{obsid}}"
+                    target="_blank" rel="noopener noreferrer">
                     {{obsid}} </a> </td>
         </tr>
         {% endfor %}
