Progress toward storing data and multi-year indices

--- a/kalman_watch/index_kalman_perigee_detail.html
+++ b/kalman_watch/index_kalman_perigee_detail.html
@@ -24,11 +24,11 @@
 </head>
 
 <body>
-    {% if evt_perigee_prev_dirname %} <a href="../{{evt_perigee_prev}}/index.html">Previous</a>{%
+    {% if evt_perigee_prev_dirname %} <a href="../../{{evt_perigee_prev_dirname}}/index.html">Previous</a>{%
     endif %}
     <a href="../../index.html">Index</a>
     <a href="../{{dirname_year}}">{{dirname_year}}</a>
-    {% if evt_perigee_next_dirname %} <a href="../{{evt_perigee_next}}/index.html">Next</a>{% endif %}
+    {% if evt_perigee_next_dirname %} <a href="../../{{evt_perigee_next_dirname}}/index.html">Next</a>{% endif %}
     <h1>Perigee Kalman plot {{date_perigee}} ({{dirname}})</h1>
     {{kalman_plot_html}}
     <p></p>
