--- a/kalman_watch/index_kalman_perigee_list.html
+++ b/kalman_watch/index_kalman_perigee_list.html
@@ -26,9 +26,7 @@
 </head>
 
 <body>
-    {% if prev %} <a href="{{prev}}/index.html">Previous</a>{% endif %}
-    {% if index %} <a href="{{index}}/index.html">Index</a>{% endif %}
-    {% if next %} <a href="{{next}}/index.html">Next</a>{% endif %}
+    <a href="../index.html">Kalman watch home</a>
     <h1>Perigee Kalman index page: {{description}}</h1>
     <table>
         <tr>
