--- a/kalman_watch/index_low_kalman_template.html
+++ b/kalman_watch/index_low_kalman_template.html
@@ -37,7 +37,7 @@
 
     For a per-perigee view of Kalman drops see the  <a href="perigees/index.html">Perigee Kalman watch</a> page.
 
-    <img src="mon_win_kalman_drops_-45d_-1d.png">
+    <img src="mon_win_kalman_drops_-45d_-1d.png" width="1000">
 
     <h3>Kalman drop intervals (valid through {{last_date}})</h3>
 
