--- a/kalman_watch/index_low_kalman_template.html
+++ b/kalman_watch/index_low_kalman_template.html
@@ -33,9 +33,13 @@
 
     <h2> Kalman star watch </h2>
 
-    See also <a href="perigees/index.html">Perigee Kalman watch</a>.
+    <h3> Kalman drops through perigee </h3>
 
-    <h3> Summary </h3>
+    For a per-perigee view of Kalman drops see the  <a href="perigees/index.html">Perigee Kalman watch</a> page.
+
+    <img src="mon_win_kalman_drops_-45d_-1d.png" width="1000">
+
+    <h3>Kalman drop intervals (valid through {{last_date}})</h3>
 
     <p>
         The plot below shows intervals where the number of Kalman stars
@@ -43,8 +47,6 @@
         (AOKALSTR) was zero or one for at least four updates. Intervals
         in the last 30 days are plotted in orange.
     </p>
-
-    <h3>Kalman drop intervals (valid through {{last_date}})</h3>
 
     {{plot_html}}
 
