--- a/kalman_watch/index_low_kalman_template.html
+++ b/kalman_watch/index_low_kalman_template.html
@@ -34,10 +34,10 @@
     <h2> Kalman star watch </h2>
 
     <h3> Kalman drops through perigee </h3>
-
+    
     For a per-perigee view of Kalman drops see the  <a href="perigees/index.html">Perigee Kalman watch</a> page.
-
-    <img src="mon_win_kalman_drops_-45d_-1d.png" width="1000">
+    
+    {{kalman_plot_html}}
 
     <h3>Kalman drop intervals (valid through {{last_date}})</h3>
 
